--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
     <title>SpaceWalkers</title>
 
@@ -32,7 +34,7 @@
 
     <div class="container home">
       <header class="intro">
-        <!-- image code here -->
+        <img src="img/main-header.png" alt="" />
 
         <h2>Lift Off</h2>
 
